# reqs

./: .copier-answers-py.yaml  .gitignore  hatch.toml  noxfile.py  pyproject.toml  readme.md
.circleci/: config.yaml  config.yml
.github/workflows/: pypi.yaml
mise/: config.toml
requirements/: base.in  base.txt  ci.txt  dev.in  dev.txt
src/reqs/: cli.py  config.py  utils.py  version.py
src/reqs/tests/: test_cli.py  test_config.py
