[build-system]
requires = ['hatchling', 'hatch-requirements-txt']
build-backend = 'hatchling.build'


[project]
name = 'reqs'
authors = [{name = 'Randy Syring', email = 'randy.syring@level12.io'}]
version = '0.1'
dynamic = ['dependencies', 'optional-dependencies']


[project.scripts]
'reqs' = 'reqs.cli:reqs'


[tool.reqs]

sync_pipx = true

